Add GitHub actions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,9 @@ services:
       context: ./places_remember_back
       dockerfile: Dockerfile
     command: >
-      sh -c   "python3 manage.py makemigrations &&
+      sh -c   "coverage run manage.py test
+               coverage report
+               python3 manage.py makemigrations &&
                python3 manage.py migrate &&
                python3 manage.py runserver 0.0.0.0:8000
               "
