--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       POSTGRES_PASSWORD: 123
       POSTGRES_USER: places_remember_user
       POSTGRES_DB: places_remember_db
+      POSTGRES_HOST_AUTH_METHOD: 0.0.0.0
   django:
     build:
       context: ./places_remember_back
