Bugfix GitHub actions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,27 @@
-version: '2.1'
+version: '3.9'
 
 services:
+  django:
+    build:
+      context: ./places_remember_back
+      dockerfile: Dockerfile
+    depends_on:
+      - postgres
+    command: >
+      sh -c   "
+              python3 manage.py wait_for_db &&
+              python3 manage.py makemigrations &&
+              python3 manage.py migrate &&
+              coverage run manage.py test &&
+              coverage report &&
+              python3 manage.py runserver 0.0.0.0:8000
+              "
+    volumes:
+      - .:/usr/src/places_remember
+    ports:
+      - 8000:8000
+
+
   postgres:
     restart: unless-stopped
     image: postgis/postgis:latest
@@ -8,26 +29,10 @@ services:
     volumes:
       - postgres:/var/lib/postgresql/data
     environment:
+      POSTGRES_HOST_AUTH_METHOD: trust
       POSTGRES_PASSWORD: 123
       POSTGRES_USER: places_remember_user
-  django:
-    build:
-      context: ./places_remember_back
-      dockerfile: Dockerfile
-    command: >
-      sh -c   "python manage.py wait_for_db &&
-              python3 manage.py makemigrations &&
-              python3 manage.py migrate &&
-              coverage run manage.py test &&
-              coverage report &&
-              python3 manage.py runserver 0.0.0.0:8000
-             "
-    volumes:
-      - .:/usr/src/places_remember
-    ports:
-      - 8000:8000
-    depends_on:
-      - postgres
+      POSTGRES_DB: places_remember_db
 
 volumes:
   postgres:
