--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,25 @@
 version: '3.9'
 
 services:
+  postgres:
+    image: postgres:latest
+    volumes:
+      - postgres:/var/lib/postgresql/data
+    environment:
+      POSTGRES_HOST_AUTH_METHOD: trust
+      POSTGRES_PASSWORD: 123
+      POSTGRES_USER: places_remember_user
+      POSTGRES_DB: places_remember_db
+
   django:
     build:
       context: ./places_remember_back
       dockerfile: Dockerfile
     depends_on:
       - postgres
+    volumes:
+      - .:/usr/src/places_remember
+    entrypoint: /checkpostgres.sh
     command: >
       sh -c   "
               python3 manage.py makemigrations &&
@@ -15,22 +28,8 @@ services:
               coverage report &&
               python3 manage.py runserver 0.0.0.0:8000
               "
-    volumes:
-      - .:/usr/src/places_remember
     ports:
       - 8000:8000
-
-
-  postgres:
-    restart: unless-stopped
-    image: postgis/postgis:latest
-    hostname: postgres
-    volumes:
-      - postgres:/var/lib/postgresql/data
-    environment:
-      POSTGRES_PASSWORD: 123
-      POSTGRES_USER: places_remember_user
-      POSTGRES_DB: places_remember_db
 
 volumes:
   postgres:
