--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   postgres:
-    image: postgres:latest
+    image: postgis/postgis:latest
     volumes:
       - postgres:/var/lib/postgresql/data
     environment:
