--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
 version: '3.9'
 
 services:
-  postgres:
+  postgres_db:
     image: postgis/postgis:latest
+    restart: always
+    hostname: postgres
     volumes:
       - postgres:/var/lib/postgresql/data
     environment:
@@ -15,7 +17,7 @@ services:
       context: ./places_remember_back
       dockerfile: Dockerfile
     depends_on:
-      - postgres
+      - postgres_db
     volumes:
       - .:/usr/src/places_remember
     command: >
