--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,7 @@ services:
       sh -c   "
               python3 manage.py makemigrations &&
               python3 manage.py migrate &&
-              coverage run manage.py test &&
-              coverage report
+              python3 manage.py runserver 0.0.0.0:8000
               "
     ports:
       - 8000:8000
