--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,8 +31,8 @@ jobs:
 
     - name: Install dependencies
       run: |
+        cd places_remember_back/
         python -m pip install --upgrade pip
-        ls
         pip install -r requirements.txt
     - name: postgis prerequisites
       run: apt-get update && apt-get -y install --no-install-recommends \
