--- a/.github/workflows/django_tests.yml
+++ b/.github/workflows/django_tests.yml
@@ -35,7 +35,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: postgis prerequisites
-      run: apt-get update && apt-get install \
+      run: sudo apt-get update && sudo apt-get install \
             build-essential \
             python3 python3-setuptools python3-pip \
             postgresql-13 postgresql-client-13 \
