--- a/.github/workflows/django_tests.yml
+++ b/.github/workflows/django_tests.yml
@@ -34,13 +34,9 @@ jobs:
         cd places_remember_back/
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: postgis prerequisites
-      run: sudo apt-get update && sudo apt-get install \
-            build-essential \
-            python3 python3-setuptools python3-pip \
-            postgresql-13 postgresql-client-13 \
-            postgis postgresql-13-postgis-3 postgresql-13-postgis-3-scripts \
-            libproj-dev proj-data python3-gdal proj-bin libgeos-dev gdal-bin
+    - name: Postgis prerequisites
+      run: sudo apt-get install postgis postgresql-13 postgresql-client-13 postgresql-13-postgis-3 postgresql-13-postgis-3-scripts
+           sudo apt-get install libproj-dev proj-data proj-bin libgeos-dev gdal-bin
     - name: Run tests
       run: |
         python manage.py makemigrations
