--- a/.github/workflows/django_tests.yml
+++ b/.github/workflows/django_tests.yml
@@ -36,6 +36,7 @@ jobs:
         pip install -r requirements.txt
     - name: Run tests
       run: |
+        cd places_remember_back/
         python manage.py makemigrations
         python manage.py migrate
         coverage run manage.py test
