Bugfix GitHub actions

--- a/.github/workflows/django_tests.yml
+++ b/.github/workflows/django_tests.yml
@@ -14,6 +14,7 @@ jobs:
     services:
       postgres:
         image: postgis/postgis:latest
+        hostname: postgres
         env:
           POSTGRES_PASSWORD: 123
           POSTGRES_USER: places_remember_user
