--- a/.github/workflows/django_tests.yml
+++ b/.github/workflows/django_tests.yml
@@ -41,3 +41,4 @@ jobs:
         python manage.py makemigrations
         python manage.py migrate
         coverage run manage.py test
+        coverage report
