--- a/.github/workflows/django_tests.yml
+++ b/.github/workflows/django_tests.yml
@@ -15,6 +15,7 @@ jobs:
       postgres:
         image: postgis/postgis:latest
         env:
+          POSTGRES_HOST: 0.0.0.0
           POSTGRES_PASSWORD: 123
           POSTGRES_USER: places_remember_user
           POSTGRES_DB: places_remember_db
