--- a/places_remember_back/requirements.txt
+++ b/places_remember_back/requirements.txt
@@ -7,13 +7,21 @@ coveralls==3.3.1
 cryptography==36.0.2
 defusedxml==0.7.1
 Django==4.0.3
+django-environ==0.8.1
 django-filter==21.1
 djangorestframework==3.13.1
 djangorestframework-gis==0.18
+docopt==0.6.2
+flake8==4.0.1
 idna==3.3
+mccabe==0.6.1
 oauthlib==3.2.0
 packaging==21.3
 psycopg2-binary==2.9.3
+pycodestyle==2.8.0
+pycparser==2.21
+pyflakes==2.4.0
+PyJWT==2.3.0
 pyparsing==3.0.7
 python3-openid==3.2.0
 pytz==2022.1
