--- a/.github/workflows/django_tests.yml
+++ b/.github/workflows/django_tests.yml
@@ -13,11 +13,7 @@ jobs:
     services:
       postgres:
         image: postgis/postgis:latest
-        env:
-          POSTGRES_HOST: 0.0.0.0
-          POSTGRES_PASSWORD: 123
-          POSTGRES_USER: places_remember_user
-          POSTGRES_DB: places_remember_db
+        hostname: postgres
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
