--- a/.github/workflows/django_tests.yml
+++ b/.github/workflows/django_tests.yml
@@ -13,6 +13,9 @@ jobs:
     services:
       postgres:
         image: postgis/postgis:latest
+        env:
+          POSTGRES_PASSWORD: postgres
+
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
