--- a/.github/workflows/django_tests.yml
+++ b/.github/workflows/django_tests.yml
@@ -14,7 +14,7 @@ jobs:
       postgres:
         image: postgis/postgis:latest
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: 123
 
         ports:
           - 5432:5432
