--- a/places_remember_back/requirements.txt
+++ b/places_remember_back/requirements.txt
@@ -9,8 +9,11 @@ defusedxml==0.7.1
 Django==4.0.3
 django-environ==0.8.1
 django-filter==21.1
+django-templated-mail==1.1.1
 djangorestframework==3.13.1
 djangorestframework-gis==0.18
+djangorestframework-simplejwt==5.1.0
+djoser==2.0.5
 docopt==0.6.2
 flake8==4.0.1
 idna==3.3
